# board.md

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/design/: DECISIONS.md
docs/research/: 2026032001_LANDSCAPE_SURVEY.md
src/board_md/: __init__.py  cli.py  notify.py  render.py  skills.py  store.py
src/board_md/plugins/: __init__.py  feishu.py  ntfy.py  obsidian.py
tests/: conftest.py  test_cli.py  test_notify.py  test_plugins.py  test_render.py  test_skills.py  test_store.py
