[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "board-md"
version = "0.2.0"
description = "Markdown-native project board for the AI agent era"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9",
    "python-frontmatter>=1.1",
    "python-slugify>=8.0",
    "wcwidth>=0.2",
]

[project.scripts]
board = "board_md.cli:app"

[project.urls]
Homepage = "https://github.com/gongwu-ai/board.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
